--- a/public/blog/panel/css/style.css
+++ b/public/blog/panel/css/style.css
@@ -1088,6 +1088,9 @@ textarea {
     display: none;
 }
 
+select {
+    display: none;
+}
 .dropdown-select {
     margin-bottom: 15px;
     background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0) 100%);
